--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
-<span>WebPack Angular 2 Starter by <a [href]="url">@AngularClass</a></span>
-<h1>Good Day</h1>
-<div>
-    <a [href]="url">
-        <img [src]="angularclassLogo" width="25%">
-    </a>
-</div>
+<section class="main">
+    <app-game></app-game>
+    <span>WebPack Angular 2 Starter by <a [href]="url">@AngularClass</a></span>
+    <h1>Good Day</h1>
+    <div>
+        <a [href]="url">
+            <img [src]="angularclassLogo" width="25%">
+        </a>
+    </div>
+</section>
