--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,8 +2,12 @@
 @import '../styles/utils/functions';
 @import '../styles/utils/mixins';
 
+.main {
+  position: relative;
+  background-color: $mid-grey;
+  height: 100%;
+}
+
 h1 {
   @include type-setting(2);
-
-  color: red
 }
