Added div(class=header) in game-board.component

--- a/src/app/game/game-board.component.html
+++ b/src/app/game/game-board.component.html
@@ -1,3 +1,9 @@
-<div class="board">
-    <div >game board</div>
+<div class="board {{level.name}}">
+    <div class="header">
+        <div class="header-left"></div>
+        <div class="smiley">
+            <img src="/assets/img/icons/smiley-smile.ico">
+        </div>
+        <div class="header-right"></div>
+    </div>
 </div>
