--- a/src/app/game/game-tile.component.scss
+++ b/src/app/game/game-tile.component.scss
@@ -18,6 +18,7 @@ $colors: #ff00af, // 1
   width: $tile-width;
   border: 1px solid rgba(0, 0, 0, 0.3);
   cursor: crosshair;
+  user-select: none;
 
   &:before {
     content: "";
