Added gameStatus in game.service

--- a/src/app/game/game-board.component.html
+++ b/src/app/game/game-board.component.html
@@ -13,3 +13,6 @@
                        (onClickTile)="clickTile($event)"></app-game-tile>
     </div>
 </div>
+<div>
+    {{gameStatus.flags}}
+</div>
