--- a/src/app/game/game-board.component.html
+++ b/src/app/game/game-board.component.html
@@ -1,18 +1,19 @@
 <div class="board {{level.name}}">
     <div class="header">
-        <div class="header-left"></div>
+        <div class="header-left">
+            {{status.flags}}
+        </div>
         <div class="smiley">
-            <img src="/assets/img/icons/smiley-smile.ico">
+            <img *ngIf="status.gameOver && status.gameWon" src="/assets/img/icons/smiley-cool.ico" (click)="clickSmiley()">
+            <img *ngIf="status.gameOver && !status.gameWon" src="/assets/img/icons/smiley-sad.ico" (click)="clickSmiley()">
+            <img *ngIf="!status.gameOver" src="/assets/img/icons/smiley-smile.ico" (click)="clickSmiley()">
         </div>
         <div class="header-right"></div>
     </div>
     <div class="grid">
-        <app-game-tile *ngFor="let tile of tiles$ | async; let i = index"
+        <app-game-tile *ngFor="let tile of tiles; let i = index"
                        [tile]="tile"
                        (onRightClickTile)="clickTile($event, true)"
                        (onClickTile)="clickTile($event)"></app-game-tile>
     </div>
-</div>
-<div>
-    {{gameStatus.flags}}
 </div>
