Changed smiley img src path

--- a/src/app/game/game-tile.component.html
+++ b/src/app/game/game-tile.component.html
@@ -3,7 +3,7 @@
     <div class="tile-content-wrapper">
         <div class="tile-content" *ngIf="!tile.Revealed && tile.Covered">
             <div>
-                <img src="/assets/img/icons/flag.ico">
+                <img src="/ng2-minesweeper/dist/assets/img/icons/flag.ico">
             </div>
         </div>
         <div *ngIf="tile.Revealed"
