--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<section class="main">
-    <app-game></app-game>
+<section class="site-wrapper">
+    <section class="main">
+        <router-outlet></router-outlet>
+    </section>
 </section>
