--- a/src/app/game/game-tile.component.scss
+++ b/src/app/game/game-tile.component.scss
@@ -2,7 +2,7 @@
 @import '../../styles/utils/functions';
 @import '../../styles/utils/mixins';
 
-$tile-width: 2rem;
+$tile-width: 3rem;
 
 $colors: #ff00af, // 1
 #47f01c, // 2
@@ -13,60 +13,55 @@ $colors: #ff00af, // 1
 #622f43, // 7
 #23010b; // 8
 
-.tile {
-  position: relative;
+:host {
   width: $tile-width;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  cursor: crosshair;
+  height: $tile-width;
+  padding: 2px;
   user-select: none;
-
-  &:before {
-    content: "";
-    display: block;
-    padding-top: 100%;
-  }
-
-  &.unrevealed {
-    background-color: #FB6648;
-
-    &:hover {
-      background-color: #9e472c;
-    }
-  }
 }
 
-.tile-content-wrapper {
-  @include type-setting(1);
-
-  position: absolute;
-  left: 0;
-  top: 0;
+.tile-cell {
   width: 100%;
   height: 100%;
-  font-weight: 600;
+  border-radius: .2rem;
 
-  .tile-content {
-    width: 100%;
-    height: 100%;
+  background-color: #fefefe;
+  box-shadow: inset 0px 0px .3px 2px rgba(0,0,0,1);
 
-    & > div {
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-    }
+  &.unknown {
+    background-color: #62b2fe;
+      border: 2px solid;
+      border-color: #68cdff #3d5482 #3d5482 #68cdff;
+      box-shadow: none;
+      &:hover {
+        border-color: #3d5482 #68cdff #68cdff #3d5482;
+      }
   }
 
-  img {
-    object-fit: fill;
-    object-position: center;
+  &.mine-wrong {
+    background-color: #ab0a11;
+  }
+
+  .tile-content {
+    @include type-setting(2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    height: auto;
+    height: 100%;
+    color: $text-color;
   }
 
   @for $x from 1 through 8 {
     .tile-content-#{$x} {
       color: nth($colors, $x);
     }
+  }
+
+  img {
+    object-fit: fill;
+    object-position: center;
+    width: 60%;
+    height: auto;
   }
 }
