Added game-menu in game.component

--- a/src/app/+game/game.component.html
+++ b/src/app/+game/game.component.html
@@ -1,3 +1,17 @@
 <div class="game-wrapper">
-
+    <div class="game-menu">
+        <div class="game-menu-item">
+            <button>
+                <img src="/assets/img/bomb_green.png">
+                <span>New Game</span>
+            </button>
+        </div>
+        <div class="game-menu-item">
+            <button>
+                <img src="/assets/img/bomb_crown.png">
+                <span>Credits</span>
+            </button>
+        </div>
+    </div>
+    <div class="game-main"></div>
 </div>
