--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,6 +1,9 @@
 // -----------------------------------------------------------------------------
 // This file contains all application-wide Sass variables.
 // -----------------------------------------------------------------------------
+@import url("https://fonts.googleapis.com/css?family=Bungee|Bungee+Outline");
+
+$base-font: 'Bungee', cursive, sans-serif;
 
 /// Base font size
 /// @type Size
