--- a/src/app/+game/game.component.html
+++ b/src/app/+game/game.component.html
@@ -14,4 +14,7 @@
         </div>
     </div>
     <div class="game-main"></div>
+    <div class="game-logo">
+        <img src="/assets/img/minesweeper_logo.png">
+    </div>
 </div>
