Added game-inform in game-board.component

--- a/src/app/+game/game.component.html
+++ b/src/app/+game/game.component.html
@@ -13,7 +13,9 @@
             </button>
         </div>
     </div>
-    <div class="game-main"></div>
+    <div class="game-main">
+        <router-outlet></router-outlet>
+    </div>
     <div class="game-logo">
         <img src="/assets/img/minesweeper_logo.png">
     </div>
