--- a/src/app/+game/game-board/game-board.component.html
+++ b/src/app/+game/game-board/game-board.component.html
@@ -1,4 +1,18 @@
 <div class="game-wrapper">
+    <div class="game-inform">
+        <div class="bum control-bum">
+            <img class="inform-bun-img" src="/assets/img/bomb_junior.png">
+            <h4>Junior</h4>
+        </div>
+        <div class="bum control-bum">
+            <img class="inform-bun-img" src="/assets/img/bomb_senior.png">
+            <h4>Senior</h4>
+        </div>
+        <div class="bum control-bum">
+            <img class="inform-bun-img" src="/assets/img/bomb_master.png">
+            <h4>Master</h4>
+        </div>
+    </div>
     <div class="game-board">
         <div class="grid {{chosenLevel.name}}">
             <app-game-tile *ngFor="let tile of tiles$ | async; let i = index"
@@ -8,15 +22,15 @@
         </div>
     </div>
     <div class="game-inform">
-        <div class="inform-bum timer-bum">
+        <div class="bum inform-bum timer-bum">
             <img class="inform-bun-img" src="/assets/img/clock.png">
             <h2>099</h2>
         </div>
-        <div class="inform-bum">
+        <div class="bum inform-bum">
             <img class="inform-bun-img" src="/assets/img/bomb_fear.png">
             <h3>99</h3>
         </div>
-        <div class="inform-bum">
+        <div class="bum inform-bum">
             <img class="inform-bun-img" src="/assets/img/flag.png">
             <h3>10</h3>
         </div>
