--- a/src/app/+game/game-board/game-board.component.scss
+++ b/src/app/+game/game-board/game-board.component.scss
@@ -40,20 +40,15 @@ $tile-width: 2rem;
   flex-direction: column;
   justify-content: center;
   width: 20%;
-  max-width: 150px;
+  max-width: 200px;
   height: 100%;
   color: $text-color;
   user-select: none;
 
-  .inform-bum {
+  .bum {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ffa711;
-    padding: $base-line-height 0;
-    border: 2px solid #603309;
-    border-radius: 1rem 0 0 1rem;
-    box-shadow: 0px 0px 10px 2px rgba(96,51,9,1);
     margin-bottom: $base-line-height;
 
     img {
@@ -76,6 +71,23 @@ $tile-width: 2rem;
       }
       margin: 0;
     }
+
+    h4 {
+      @include type-setting(0);
+      @include respond-to(medium) {
+        @include type-setting(1);
+      }
+      margin: 0;
+    }
+
+  }
+
+  .inform-bum {
+    background-color: #ffa711;
+    padding: $base-line-height 0;
+    border: 2px solid #603309;
+    border-radius: 1rem 0 0 1rem;
+    box-shadow: 0px 0px 10px 2px rgba(96,51,9,1);
   }
 
   .timer-bum {
@@ -83,6 +95,14 @@ $tile-width: 2rem;
     img {
       width: 50%;
       margin-bottom: $base-line-height;
+    }
+  }
+
+  .control-bum {
+    img {
+      width: 30%;
+      height: auto;
+      margin-right: 5px;
     }
   }
 }
