--- a/src/app/+game/game.component.html
+++ b/src/app/+game/game.component.html
@@ -1,7 +1,7 @@
 <div class="game-wrapper">
     <div class="game-menu">
         <div class="game-menu-item">
-            <button>
+            <button (click)="newGame()">
                 <img src="/assets/img/bomb_green.png">
                 <span>New Game</span>
             </button>
