--- a/src/app/+game/game-board/game-board.component.html
+++ b/src/app/+game/game-board/game-board.component.html
@@ -1,5 +1,5 @@
 <div class="game-wrapper">
-    <div class="game-inform">
+    <div class="game-inform game-control">
         <div class="bum control-bum"
              *ngFor="let level of levels"
              [class.active]="chosenLevel.name == level.name"
