--- a/src/app/+game/game.component.html
+++ b/src/app/+game/game.component.html
@@ -7,7 +7,7 @@
             </button>
         </div>
         <div class="game-menu-item">
-            <button>
+            <button (click)="checkAbout()">
                 <img src="/assets/img/bomb_crown.png">
                 <span>Credits</span>
             </button>
