--- a/src/app/+game/game-about/about.component.html
+++ b/src/app/+game/game-about/about.component.html
@@ -6,9 +6,10 @@
     </div>
     <div class="about-body">
         <p>
-            Minesweeper is a single-player puzzle game. The objective of the game is to clear a rectangular board
-            containing hidden "mines" without detonating any of them, with help from clues about the number of
-            neighboring mines in each field.
+            The objective in Minesweeper is to find and mark all the mines hidden under the grey squares, in the shortest time possible. This is done by clicking on the squares to open them. Each square will have one of the following:
+            A mine, and if you click on it you'll lose the game.
+            A number, which tells you how many of its adjacent squares have mines in them.
+            Nothing. In this case you know that none of the adjacent squares have mines, and they will be automatically opened as well.
         </p>
         <p><strong>Author:</strong> Daniel Pan</p>
     </div>
