Fixed generate game twice bug when navigate to /game

--- a/src/app/+game/game-board/game-board.component.html
+++ b/src/app/+game/game-board/game-board.component.html
@@ -1,4 +1,4 @@
-<div class="game-wrapper">
+<div class="game-board-wrapper">
     <div class="game-inform game-control">
         <div class="bum control-bum"
              *ngFor="let level of levels"
