--- a/src/app/+game/game.component.html
+++ b/src/app/+game/game.component.html
@@ -1,16 +1,16 @@
 <div class="game-wrapper">
     <div class="game-menu">
         <div class="game-menu-item">
-            <button (click)="newGame()">
+            <div class="button" (click)="newGame()">
                 <img src="/assets/img/bomb_green.png">
                 <span>New Game</span>
-            </button>
+            </div>
         </div>
         <div class="game-menu-item">
-            <button (click)="checkAbout()">
+            <div class="button" (click)="checkAbout()">
                 <img src="/assets/img/bomb_crown.png">
                 <span>Credits</span>
-            </button>
+            </div>
         </div>
     </div>
     <div class="game-main">
