--- a/src/app/+game/game-board/game-board.component.scss
+++ b/src/app/+game/game-board/game-board.component.scss
@@ -4,10 +4,10 @@
 
 $tile-width: 2rem;
 
-.game-wrapper {
+.game-board-wrapper {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 .game-board {
