--- a/src/app/+game/game.component.scss
+++ b/src/app/+game/game.component.scss
@@ -13,6 +13,7 @@
 .game-menu {
   display: flex;
   justify-content: space-around;
+  user-select: none;
 
   .game-menu-item {
     width: 48%;
@@ -20,7 +21,7 @@
     position: relative;
   }
 
-  button {
+  .button {
     @include type-setting(0);
 
     position: absolute;
