--- a/src/app/+game/game-board/game-board.component.scss
+++ b/src/app/+game/game-board/game-board.component.scss
@@ -6,8 +6,9 @@ $tile-width: 2rem;
 
 .game-board-wrapper {
   display: flex;
+  position: absolute;
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 .game-board {
