Added personal best record store in local storage

--- a/src/app/+game/game-board/game-board.component.html
+++ b/src/app/+game/game-board/game-board.component.html
@@ -17,13 +17,6 @@
         </div>
     </div>
     <div class="game-inform">
-        <div class="bum inform-bum timer-bum">
-            <img src="/assets/img/clock.png">
-            <h2>
-                <app-game-timer [start]="gameService.Status.gameStart"
-                                [over]="gameService.Status.gameOver"></app-game-timer>
-            </h2>
-        </div>
         <div class="bum inform-bum">
             <img src="/assets/img/bomb_fear.png">
             <h3>{{chosenLevel.mines}}</h3>
@@ -31,6 +24,21 @@
         <div class="bum inform-bum">
             <img src="/assets/img/flag.png">
             <h3>{{gameService.Status.flags}}</h3>
+        </div>
+        <div class="bum inform-bum timer-bum">
+            <img src="/assets/img/clock.png">
+            <h2>
+                <app-game-timer [start]="gameService.Status.gameStart"
+                                [over]="gameService.Status.gameOver"
+                                (onTimerStop)="setGameTime($event)"></app-game-timer>
+            </h2>
+        </div>
+        <div class="bum inform-bum best-bum">
+            <img src="/assets/img/best.png">
+            <div class="text">
+                <h5>best</h5>
+                <h5>{{gameService.Status.best}}</h5>
+            </div>
         </div>
     </div>
 </div>
