--- a/src/app/+game/game-board/game-board.component.scss
+++ b/src/app/+game/game-board/game-board.component.scss
@@ -81,6 +81,14 @@ $tile-width: 2rem;
       margin: 0;
     }
 
+    h5 {
+      @include type-setting(-1);
+      @include respond-to(medium) {
+        @include type-setting(0);
+      }
+      margin: 0;
+    }
+
   }
 
   .inform-bum {
@@ -118,6 +126,21 @@ $tile-width: 2rem;
       width: 25%;
       height: auto;
       margin-right: 5px;
+    }
+  }
+
+  .best-bum {
+
+    img {
+      width: 30%;
+      margin-right: 5px;
+    }
+
+    .text {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
   }
 }
